# iio-apps-2023

./: .gitignore  1st_programme.py  README.md  buffer_waveform.py  read_buffer.py  script1  script2  test.py  test_ctx.c
Python/: level.py  oscilloscope.py
bash/: bash-script.sh  bash1.sh  bash2.sh  bash_script.sh  bash_script1.sh  change_attr.sh  increment.sh  increment_attribute.sh  incremental.sh  indiviaul_channels.sh  script1  script1.sh  script2  script2.sh  scriptex1.sh  scriptex2.sh  set_Voltage.sh  set_voltage.sh  set_voltages.sh  test
bash_file/: practice_bash.sh  write_chans.sh
bash_script/: test
bashscript/: bashscript.sh
day1/: 01-context-error.c  02-read-ctx-attr.c  03-read-dev-chan.c  04-xadc-temp.c  CMakeLists.txt  Makefile  a.out  acc.c  acc_calib.c  adxl_calib.c  all_attr.c  axes_gui.c  buffer.c  calib_acc.c  calib_accel.c  calib_cipi.c  challenge.c  ctx_attr.c  ctx_av.c  ctx_chn_attr.c  ctx_find.c  ctx_read_attr.c  ctx_temp.c  ctx_temp_read.c  dev-chan_attr.c  devchan_attr.c  get_channels.c  hello  hello.c  hello_iio  hello_iio.c  incrr  part1.c  part2.c  part2_3.c  part3.c  part4.c  read_XADC.c  read_acc.c  read_accel.c  (+23 more)
day1/bash-scripts/: write2channels
day2/: CMakeLists.txt  Challenge1.c  Challenge3.c  Challenge4.c  Challenge5.c  Makefile  axes.c  calib_acc.c  calib_accel.c  day2_app.c  day2_app_2.c  detect_shock.c  read_accel.c  read_adc.c  read_xyz.c  shock_buffer.c  shock_detect.c  shock_detection.c
day2/adc_result.c/: CMakeLists.txt  adc_result.c  read_buf.c  shock_detect.c
day2/calib_accel/: CMakeLists.txt  Makefile  a.out  calib_accel.c
day2/read_accel/: CMakeLists.txt  Makefile  a.out  read_accel  read_accel.c
day2/read_xyz/: CMakeLists.txt  Makefile  a.out  read_xyz  read_xyz.c
day2/shock_detect/: CMakeLists.txt  Makefile  a.out  shock_detect.c
day3/: CMakeLists.txt  Makefile  python_script.py  read_buffer.c  shock_buffer  shock_buffer.c
day3/PythonPlot/: hello.py
day3/ShockBuffer/: CMakeLists.txt  shock_buffer.c
day3/python/: boloboc.py  osciloscop.py
excercises/: script1.sh  script2.sh
exe/: Write_x_arg.sh  for-loop.sh
python/: python.py  shock_detect_buffer_plt.py  test.py
python-apps/: buffered-read.py  hello-iio.py  poloboc.py
python_practica/: boloboc.py  osc.py
test_python/: test.py  test2.py
